@@ -21,3 +21,4 @@ depth: 1
  * Only show draft / live status tags on snippets that have `DraftStateMixin` applied (Sage Abdullah)
  * Prevent JS error when initialising chooser modals with no tabs (LB (Ben) Johnston)
  * Add missing vertical spacing between chooser modal header and body when there are no tabs (LB (Ben) Johnston)
+ * Reinstate specific labels for chooser buttons (for example 'Choose another page', 'Edit this page' not 'Change', 'Edit') so that it is clearer for users and non-English translations (Matt Westcott)
